--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "The high quality, completely customisable, performant and 100% free blog template for Jekyll"
-description: "Chalk uses all the best tools and merges them into one premium blogging theme."
+title: "Christian Solorzano's Thoughts"
+description: "An online blog frequently updated by graphic designer, Christian Solorzano."
 ---
 <ul class="article-list">
   {% for post in paginator.posts %}
