--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ description: "An online blog frequently updated by graphic designer, Christian S
 <ul class="article-list">
   {% for post in paginator.posts %}
     <li class="article-list-item reveal">
-      <a href="{{ post.url }}" title="{{ post.title }}">
+      <a href="{{ post.url | relative_url }}" title="{{ post.title }}">
         <h1>
           {{ post.title }}
         </h1>
@@ -28,7 +28,7 @@ description: "An online blog frequently updated by graphic designer, Christian S
         <span class="article-list-divider">-</span>
         <div class="article-list-tags">
           {% for tag in post.tags %}
-            <a href="{{ site.baseurl }}tag/{{ tag }}">{{ tag }}</a>
+          <a href="{{ 'tag/' | relative_url }}{{ tag }}">{{ tag }}</a>
           {% endfor %}
         </div>
       </div>
