--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "Christian Solorzano's Thoughts"
+title: "Christian Solorzano's Journal"
 description: "An online blog frequently updated by graphic designer, Christian Solorzano."
 ---
 <ul class="article-list">
@@ -11,7 +11,7 @@ description: "An online blog frequently updated by graphic designer, Christian S
           {{ post.title }}
         </h1>
       </a>
-      <p>{{ post.description }}</p>
+     <!-- <p>{{ post.description }}</p> -->
       <div class="article-list-footer">
         <span class="article-list-date">
           {{ post.date | date: "%B %-d, %Y" }}
