--- a/index.html
+++ b/index.html
@@ -1,47 +1,27 @@
 ---
-layout: default
+layout: portfolio
 title: "Christian Solorzano's Journal"
 description: "An online blog frequently updated by graphic designer, Christian Solorzano."
 ---
-<ul class="article-list">
-  {% for post in paginator.posts %}
-    <li class="article-list-item reveal">
-      <a href="{{ post.url | relative_url }}" title="{{ post.title }}">
-        <h1>
-          {{ post.title }}
-        </h1>
-      </a>
-     <!-- <p>{{ post.description }}</p> -->
-      <div class="article-list-footer">
-        <span class="article-list-date">
-          {{ post.date | date: "%B %-d, %Y" }}
-        </span>
-        <span class="article-list-divider">-</span>
-        <span class="article-list-minutes">
-          {% capture words %}
-            {{ post.content | number_of_words }}
-          {% endcapture %}
-          {% unless words contains "-" %}
-            {{ words | plus: 250 | divided_by: 250 | append: " minute read" }}
-          {% endunless %}
-        </span>
-        <span class="article-list-divider">-</span>
-        <div class="article-list-tags">
-          {% for tag in post.tags %}
-          <a href="{{ 'tag/' | relative_url }}{{ tag }}">{{ tag }}</a>
-          {% endfor %}
-        </div>
-      </div>
+    {% for post in site.posts %}
+    {% for post in site.tags.project %}
+
+
+
+    <li class="block">
+        <a href="{{ post.url | relative_url }}" title="{{ post.title }}">
+
+            <img src="./assets/projects/{{ post.image }}"/>
+            <h2>
+                {{ post.title }}
+            </h2>
+        </a>
+
+
     </li>
-  {% endfor %}
-  {% if paginator.total_pages > 1 %}
-    <li class="article-pagination reveal">
-      {% if paginator.previous_page %}
-        <a href="{{ paginator.previous_page_path }}" class="article-pagination-right">Newer posts </a>
-      {% endif %}
-      {% if paginator.next_page %}
-        <a href="{{ paginator.next_page_path }}"></span> Older posts</a>
-      {% endif %}
-    </li>
-  {% endif %}
+    {% endfor %}
+    {% endfor %}
+
+
+
 </ul>
