--- a/journal.html
+++ b/journal.html
@@ -5,20 +5,19 @@ description: "An online blog frequently updated by graphic designer, Christian S
 ---
 <ul class="article-list">
   {% for post in paginator.posts %}
-    <li class="article-list-item reveal">
-      <a href="{{ post.url | relative_url }}" title="{{ post.title }}">
-        <h1>
-          {{ post.title }}
-        </h1>
-          <img style="width:500px;" src="./assets/projects/{{ post.image }}"/>
-
-      </a>
-     <!-- <p>{{ post.description }}</p> -->
-      <div class="article-list-footer">
+  <li class="article-list-item reveal">
+    <a href="{{ post.url | relative_url }}" title="{{ post.title }}">
+      <h5>
+        {{ post.title }}
+        <span class="icon icon-ios-arrow-thin-right"></span>
+      </h5>
+    </a>
+    <p>{{ post.description }}</p>
+    <div class="article-list-footer">
         <span class="article-list-date">
           {{ post.date | date: "%B %-d, %Y" }}
         </span>
-        <span class="article-list-divider">-</span>
+      <span class="article-list-divider">-</span>
         <span class="article-list-minutes">
           {% capture words %}
             {{ post.content | number_of_words }}
@@ -27,24 +26,24 @@ description: "An online blog frequently updated by graphic designer, Christian S
             {{ words | plus: 250 | divided_by: 250 | append: " minute read" }}
           {% endunless %}
         </span>
-        <span class="article-list-divider">-</span>
-        <div class="article-list-tags">
-          {% for tag in post.tags %}
-          <a href="{{ 'tag/' | relative_url }}{{ tag }}">{{ tag }}</a>
-          {% endfor %}
-        </div>
+      <span class="article-list-divider">-</span>
+      <div class="article-list-tags">
+        {% for tag in post.tags %}
+        <a href="{{ 'tag/' | relative_url }}{{ tag }}">{{ tag }}</a>
+        {% endfor %}
       </div>
-    </li>
+    </div>
+  </li>
   {% endfor %}
   {% if paginator.total_pages > 1 %}
-    <li class="article-pagination reveal">
-      {% if paginator.previous_page %}
-        <a href="{{ paginator.previous_page_path }}" class="article-pagination-right">Newer posts </a>
-      {% endif %}
-      {% if paginator.next_page %}
-        <a href="{{ paginator.next_page_path }}"></span> Older posts</a>
-      {% endif %}
-    </li>
+  <li class="article-pagination reveal">
+    {% if paginator.previous_page %}
+    <a href="{{ paginator.previous_page_path }}" class="article-pagination-right">Newer posts <span class="icon icon-ios-arrow-thin-right"></span></a>
+    {% endif %}
+    {% if paginator.next_page %}
+    <a href="{{ paginator.next_page_path }}"><span class="icon icon-ios-arrow-thin-left"></span> Older posts</a>
+    {% endif %}
+  </li>
   {% endif %}
 </ul>
 
