--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ description: "An online blog frequently updated by graphic designer, Christian S
 
 
 
-    <li class="block">
+    <li class="block" id="#work">
         <a href="{{ post.url | relative_url }}" title="{{ post.title }}">
 
             <img src="./assets/projects/{{ post.image }}"/>
