--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@ description: "An online blog frequently updated by graphic designer, Christian S
 
 
     <div id="about">
-        <section>
+        <section style="margin-bottom: 2em;">
             <span class="introtext">
                 Christian Solorzano is a designer living in Chicago specializing in creating dynamic brand identities for a wide range of clients.  &#9786;
             </span>
@@ -165,14 +165,15 @@ description: "An online blog frequently updated by graphic designer, Christian S
         </article>
 
 
-
     </div>
     <section class="social">
         <h3>What I like</h3>
-        {% include image.html path="misc/about-me.jpg" path-detail="misc/about-me.jpg" alt="Sample image" %}
+        {% img about-me.jpg alt:'Things I Like' %}
+
         <h3>Social</h3>
-        <p class="resume">
-            Resume available to download <a href="assets/solorzano_christian_resume_design.pdf" target="_blank">here</a> <br>
+        <p>
+            Resume available to download
+            <a href="../files/solorzano_christian_resume_design.pdf" target="_blank">here</a> <br>
         </p>
         <p>
             <a href="https://www.linkedin.com/in/christian-solorzano-94aa9548" target="_blank">LinkedIn</a> <br>
@@ -183,16 +184,19 @@ description: "An online blog frequently updated by graphic designer, Christian S
         <p>
             <a href="https://www.twitter.com/xnslrzn/" target="_blank">Twitter</a> <br>
         </p>
-
+        <h4>Colophon</h4>
+        <p>This website was built using <a href="http://neat.bourbon.io/" target="_blank">Neat</a>,  <a href="http://bourbon.io/" target="_blank">Bourbon</a>, <a href="https://jekyllrb.com/">Jekyll</a>,and <a href="http://sass-lang.com/" target="_blank">Sass</a>.</p>
+        <p>Was building this website easy? NO. Was it worth it? Yes.</p>
+        <p>Typefaces used are <a href="https://typekit.com/fonts/neuzeit-grotesk/n4/wfs" target="_blank">Neuzeit Grotesk</a> and <a href="https://typekit.com/fonts/leitura-news">Leitura News</a> provided by TypeKit.</p>
+        <p>Font-sizes are based on <em>8:9 major second</em> ratio through  <a href="http://www.modularscale.com/" target="_blank">Modular Scale</a>.</p>
     </section>
     <section class="colophon">
-        <h4>Colophon</h4>
-        <p>This website was built using <a href="http://neat.bourbon.io/" target="_blank">Neat</a>,  <a href="http://bourbon.io/" target="_blank">Bourbon</a>, and <a href="http://sass-lang.com/" target="_blank">Sass</a>.</p>
-        <p>Typeface used is <a href="https://typekit.com/fonts/neuzeit-grotesk/n4/wfs" target="_blank">Neuzeit Grotesk</a> provided by TypeKit.</p>
-        <p>Font-sizes are based on <em>8:9 major second</em> ratio through  <a href="http://www.modularscale.com/" target="_blank">Modular Scale</a>.</p>
+
 
 
     </section>
+
+
 </div>
 
 
