changes to page descriptions and home layout

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: portfolio
-title: "Christian Solorzano's Journal"
-description: "An online blog frequently updated by graphic designer, Christian Solorzano."
+title: "Christian Solorzano | Online Portfolio"
+description: "Christian Solorzano is a Chicago multidisciplinary designer—he creates products, experiences, and brands."
 ---
 
 <div class="about">
@@ -11,7 +11,7 @@ description: "An online blog frequently updated by graphic designer, Christian S
     <div id="about">
         <section style="margin-bottom: 2em;">
             <span class="introtext">
-                Christian Solorzano is a designer living in Chicago specializing in creating dynamic brand identities for a wide range of clients.  &#9786;
+                Christian Solorzano is a Chicago multidisciplinary designer—he creates products, experiences, and brands. &#9786;
             </span>
 
 
