--- a/work.html
+++ b/work.html
@@ -1,7 +1,7 @@
 ---
 layout: portfolio
-title: "Christian Solorzano | Online Website"
-description: "Christian Solorzano is a Chicago based designer who specializes in creating identities, design systems, interfaces, and thoughtful ideas for diverse audiences."
+title: "Christian Solorzano | Online Portfolio"
+description: "Christian Solorzano is a Chicago multidisciplinary designer—he creates products, experiences, and brands."
 ---
 
     {% for post in site.tags.project %}
