new sectionin about page for bio

--- a/about.html
+++ b/about.html
@@ -9,13 +9,36 @@ description: "Christian Solorzano is a Chicago multidisciplinary designer—he c
 
 
     <div id="about">
-        <section style="margin-bottom: 2em;">
-            <span class="introtext">
-                Christian Solorzano is a Chicago multidisciplinary designer—he creates products, experiences, and brands. &#9786;
+
+
+
+        <div id="about-top">
+            <span class="introleft">
+        {% img about-self.png alt:'Christian Solorzano 2017' %}
+
+            </span>
+             <span class="introright">
+                 <h2>
+                     Christian Solorzano is a Graphic Designer from Chicago.
+                 </h2>
+                 <h3>
+                    His work employs strategic solutions centered around collaboration and a deep understanding of client needs.
+                 </h3>
+                 <p>
+                     “I’m devoted to honest work that tackles important issues. Through collaboration and communication, I translate ideas and concepts into realistic solutions. My work focuses on design as a process that questions and pushes boundaries. Design as a vocation enables me to better understand the world and allows me to create honest work. I'm a believer that design can significantly improve our world and I aim to create work that makes a true impact.“
+
+                 </p>
+
+                 <p>
+                     “My work is influenced by design history, advancements in technology and media, psychology, and kindness.”
+
+                 </p>
+
             </span>
 
 
-        </section>
+
+        </div>
         <article class="aboutsection">
             <h3>Experience</h3>
             <ul>
@@ -184,16 +207,12 @@ description: "Christian Solorzano is a Chicago multidisciplinary designer—he c
         <p>
             <a href="https://www.twitter.com/xnslrzn/" target="_blank">Twitter</a> <br>
         </p>
-        <h4>Colophon</h4>
+        <h3>Colophon</h3>
+
         <p>This website was built using <a href="http://neat.bourbon.io/" target="_blank">Neat</a>,  <a href="http://bourbon.io/" target="_blank">Bourbon</a>, <a href="https://jekyllrb.com/">Jekyll</a>,and <a href="http://sass-lang.com/" target="_blank">Sass</a>.</p>
         <p>Was building this website easy? NO. Was it worth it? Yes.</p>
-        <p>Typefaces used are <a href="https://typekit.com/fonts/neuzeit-grotesk/n4/wfs" target="_blank">Neuzeit Grotesk</a> and <a href="https://typekit.com/fonts/leitura-news">Leitura News</a> provided by TypeKit.</p>
+        <p>Typefaces used are <a href="https://typekit.com/fonts/neuzeit-grotesk/n4/wfs" target="_blank">Neuzeit Grotesk</a> and <a href="https://typekit.com/fonts/jaf-lapture">JAF Lapture</a> provided by TypeKit.</p>
         <p>Font-sizes are based on <em>8:9 major second</em> ratio through  <a href="http://www.modularscale.com/" target="_blank">Modular Scale</a>.</p>
-    </section>
-    <section class="colophon">
-
-
-
     </section>
 
 
