--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: portfolio
 title: "Christian Solorzano | Online Portfolio"
-description: "Christian Solorzano is a Chicago multidisciplinary designer—he creates products, experiences, and brands."
+description: "Christian Solorzano is a Graphic Designer from Chicago. His work employs strategic solutions centered around collaboration and a deep understanding of client needs."
 ---
 
 <div class="about">
@@ -26,12 +26,16 @@ description: "Christian Solorzano is a Chicago multidisciplinary designer—he c
                  </h3>
                  <p>
                      “I’m devoted to honest work that tackles important issues. Through collaboration and communication, I translate ideas and concepts into realistic solutions. My work focuses on design as a process that questions and pushes boundaries. Design as a vocation enables me to better understand the world and allows me to create honest work. I'm a believer that design can significantly improve our world and I aim to create work that makes a true impact.“
+                     <br>
+                     <br>
+                     “My work is influenced by design history, advancements in technology and media, psychology, and kindness.”
+
 
                  </p>
 
-                 <p>
-                     “My work is influenced by design history, advancements in technology and media, psychology, and kindness.”
 
+                 <p class="resume">
+                      <a href="../files/solorzano_christian_resume_design.pdf">Download resume »</a>
                  </p>
 
             </span>
@@ -40,7 +44,7 @@ description: "Christian Solorzano is a Chicago multidisciplinary designer—he c
 
         </div>
         <article class="aboutsection">
-            <h3>Experience</h3>
+            <h5>Experience</h5>
             <ul>
                 <li>
                     <lh>UpShift Creative</lh> <br>
@@ -88,7 +92,7 @@ description: "Christian Solorzano is a Chicago multidisciplinary designer—he c
 
         </article>
         <article class="aboutsection">
-            <h3>Community Involvement</h3>
+            <h5>Community Involvement</h5>
             <ul>
                 <li>
                     <lh>DePaul AIGA</lh> <br>
@@ -109,7 +113,7 @@ description: "Christian Solorzano is a Chicago multidisciplinary designer—he c
             </ul>
         </article>
         <article class="aboutsection">
-            <h3>Recognition</h3>
+            <h5>Recognition</h5>
             <ul>
                 <li>
                     <lh>Faculty | Online Publication</lh> <br>
@@ -155,7 +159,7 @@ description: "Christian Solorzano is a Chicago multidisciplinary designer—he c
 
         </article>
         <article class="aboutsection">
-            <h3>Skills</h3>
+            <h5>Skills</h5>
             <ul>
                 <li>
                     <lh>Web</lh> <br>
@@ -190,23 +194,7 @@ description: "Christian Solorzano is a Chicago multidisciplinary designer—he c
 
     </div>
     <section class="social">
-        <h3>What I like</h3>
-        {% img about-me.jpg alt:'Things I Like' %}
 
-        <h3>Social</h3>
-        <p>
-            Resume available to download
-            <a href="../files/solorzano_christian_resume_design.pdf" target="_blank">here</a> <br>
-        </p>
-        <p>
-            <a href="https://www.linkedin.com/in/christian-solorzano-94aa9548" target="_blank">LinkedIn</a> <br>
-        </p>
-        <p>
-            <a href="https://www.instagram.com/xnslrzn/" target="_blank">Instagram</a> <br>
-        </p>
-        <p>
-            <a href="https://www.twitter.com/xnslrzn/" target="_blank">Twitter</a> <br>
-        </p>
         <h3>Colophon</h3>
 
         <p>This website was built using <a href="http://neat.bourbon.io/" target="_blank">Neat</a>,  <a href="http://bourbon.io/" target="_blank">Bourbon</a>, <a href="https://jekyllrb.com/">Jekyll</a>,and <a href="http://sass-lang.com/" target="_blank">Sass</a>.</p>
