--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: portfolio
 title: "Christian Solorzano | Online Portfolio"
-description: "Christian Solorzano is a Chicago multidisciplinary designer—he creates products, experiences, and brands."
+description: "Christian Solorzano is a Graphic Designer from Chicago. His work employs strategic solutions centered around collaboration and a deep understanding of client needs."
 ---
     {% for post in site.tags.project %}
 
