edited home page. removed project thumbnails and included new copy

--- a/index.html
+++ b/index.html
@@ -1,16 +1,35 @@
 ---
 layout: portfolio
 title: "Christian Solorzano | Online Portfolio"
-description: "Christian Solorzano is a Graphic Designer from Chicago. His work employs strategic solutions centered around collaboration and a deep understanding of client needs."
+description: "Christian Solorzano is a Designer from Chicago. His work employs strategic solutions centered around collaboration and a deep understanding of client needs."
 ---
+
+<h1>
+    Christian Solorzano is a Designer.
+</h1>
+
+<p class="large-p">
+    I'm devoted to crafting human-centered experiences with an emphasis on interaction-design and the user experience.
+<p class="large-p">
+I currently live in <b>Chicago</b>, where I craft digital experiences at <b>PwC's Experience Center</b>. I've worked for non-profits, educational instutions, and advertising agencies.
+<p class="large-p">
+    I spend my free time reading and writing, managing my design publication, Faculty, making art, and taking photographs.
+</p>
+<p class="large-p">
+    My work is influenced by design history, advancements in technology and media, psychology, and kindness.
+</p>
+
+
+
     {% for post in site.tags.project %}
 
-
+<!--
 
     <li class="block" id="#work">
         <a href="{{ post.url | relative_url }}" title="{{ post.title }}">
 
             <img src="{{ '/' | relative_url }}{{ post.image }}"/>
+
 
 
 <h5>{{ post.title }}</h5>
@@ -23,4 +42,6 @@ description: "Christian Solorzano is a Graphic Designer from Chicago. His work e
     {% endfor %}
 
 
+
+-->
 
