--- a/index.html
+++ b/index.html
@@ -5,43 +5,53 @@ description: "Christian Solorzano is a Designer from Chicago. His work employs s
 ---
 
 <h1>
-    Christian Solorzano is a Designer.
+    Hi, my name is Christian Solorzano
 </h1>
 
 <p class="large-p">
-    I'm devoted to crafting human-centered experiences with an emphasis on interaction-design and the user experience.
+    … and I'm devoted to crafting human-centered experiences with an emphasis on interaction-design and collaboration.
 <p class="large-p">
-I currently live in <b>Chicago</b>, where I craft digital experiences at <b>PwC's Experience Center</b>. I've worked for non-profits, educational instutions, and advertising agencies.
+I currently reside in <a href="https://en.wikipedia.org/wiki/Chicago" target="_blank">Chicago</a>, where I create digital experiences at <a href="https://digital.pwc.com/en.html" target="_blank">PwC's Experience Center</a>. In the past I've worked for non-profits, educational institutions, and advertising agencies.
 <p class="large-p">
-    I spend my free time reading and writing, managing my design publication, Faculty, making art, and taking photographs.
+    I enjoy writing, <a href="http://www.christiansolorzano.pictures/" target="_blank">photography</a>, and learning about new ideas.
 </p>
 <p class="large-p">
-    My work is influenced by design history, advancements in technology and media, psychology, and kindness.
+    My work is influenced by design history, advancements in technology and media, philosophy, and kindness.
+</p>
+<p class="large-p">
+    I'm currently unavailable for work but you can look at my <a href="/files/solorzano_christian_resume_design.pdf">résumé</a> anyways.
 </p>
 
 
 
-    {% for post in site.tags.project %}
+<br>
+<h1>Things I Write/Create</h1>
+<hr>
 
-<!--
-
-    <li class="block" id="#work">
-        <a href="{{ post.url | relative_url }}" title="{{ post.title }}">
-
-            <img src="{{ '/' | relative_url }}{{ post.image }}"/>
+    {% for post in site.tags.personal %}
 
 
 
-<h5>{{ post.title }}</h5>
-        </a>
+<ul class="article-list">
+    <li class="article-list-item">
+        <a href="{{ post.url | relative_url }}" title="{{ post.title }}"><span class="introtext">{{ post.title }}</span></a>
+
+        <div class="article-list-footer">
+
+            <span class="article-list-date">{{ post.date | date: "%-m/%-d/%Y" }}</span>
+
+        </div>
 
 
     </li>
+
+</ul>
+
 
 
     {% endfor %}
 
 
 
--->
+
 
