new updated landing pages

--- a/work.html
+++ b/work.html
@@ -4,18 +4,13 @@ title: "Christian Solorzano | Online Portfolio"
 description: "Christian Solorzano is a Graphic Designer from Chicago. His work employs strategic solutions centered around collaboration and a deep understanding of client needs."
 ---
 
-<h1>
-    Hey, what's up?
-</h1>
-<br>
+<div id="work">
+{% img work.png alt:'Christian Solorzano 2017' %}
+</div>
 
-<h1>
-    You're probably wondering <br><br> <em>“Oh no! Where are the links to Christian’s work?” </em> <br><br> Well, I'm in the process of updating this page with recent work from 2017 and on.
-</h1>
-<br>
-<h1>
-    Check back later.
-</h1>
+
+
+
     {% for post in site.tags.project %}
 
 <!--
