new updated landing page design

--- a/about.html
+++ b/about.html
@@ -4,7 +4,6 @@ title: "Christian Solorzano | Online Portfolio"
 description: "Christian Solorzano is a Graphic Designer from Chicago. His work employs strategic solutions centered around collaboration and a deep understanding of client needs."
 ---
 
-<div class="about">
 
 
 
@@ -13,198 +12,26 @@ description: "Christian Solorzano is a Graphic Designer from Chicago. His work e
 
 
         <div id="about-top">
-            <span class="introleft">
         {% img about-self.png alt:'Christian Solorzano 2017' %}
 
-            </span>
-             <span class="introright">
-                 <h2>
-                     Christian Solorzano is a Graphic Designer from Chicago.
-                 </h2>
-                 <h3>
-                    His work employs strategic solutions centered around collaboration and a deep understanding of client needs.
-                 </h3>
-                 <p>
-                     “I’m devoted to honest work that tackles important issues. Through collaboration and communication, I translate ideas and concepts into realistic solutions. My work focuses on design as a process that questions and pushes boundaries. Design as a vocation enables me to better understand the world and allows me to create honest work. I'm a believer that design can significantly improve our world and I aim to create work that makes a true impact.“
-                     <br>
-                     <br>
-                     “My work is influenced by design history, advancements in technology and media, psychology, and kindness.”
-
-
                  </p>
-
-
-                 <p class="resume">
-                      <a href="../files/solorzano_christian_resume_design.pdf">Download resume »</a>
-                 </p>
-
-            </span>
-
 
 
         </div>
-        <article class="aboutsection">
-            <h5>Experience</h5>
-            <ul>
-                <li>
-                    <lh>UpShift Creative</lh> <br>
-                    <span class="jobtitle">Graphic Designer</span> <br>
-                    <span class="date">04.16 – Present </span><br>
-                <span class="description">
-                    Assist designers in creating design material for a variety of clients.
-                </span>
-
-                </li>
-                <li>
-                    <lh>Maestro Health</lh> <br>
-                    <span class="jobtitle">Junior Graphic Designer</span> <br>
-                    <span class="date">12.15 – 04.16 </span><br>
-                <span class="description">
-                    Assist marketing team with developing new print and web materials in accordance to their current visual identity.
-                </span>
-
-                </li>
-                <li>
-                    <lh>The University of Chicago </lh> <br>
-                    <span class="jobtitle">Design Assistant</span> <br>
-                    <span class="date">11.14 – 04.16 </span><br>
-                <span class="description">
-                    Conceptualize original ideas that bring simplicity and user friendliness to multiple web pages.
-                </span>
-                </li>
-                <li>
-                    <lh>Old St. Patrick's Church</lh> <br>
-                    <span class="jobtitle">Graphic Designer</span> <br>
-                    <span class="date">Summer 2015 </span><br>
-                <span class="description">
-                    Assist communications department on a variety of print projects for multiple organizations within the church.
-                </span>
-                </li>
-                <li>
-                    <lh>The Chicago Children's Museum </lh> <br>
-                    <span class="jobtitle">Graphic Design Intern</span> <br>
-                    <span class="date">Summer 2013</span><br>
-                <span class="description">
-                    Design web and print material under the museums's brand guidelines.
-                </span>
-                </li>
-            </ul>
+        <!-- <article class="aboutsection">
 
         </article>
         <article class="aboutsection">
-            <h5>Community Involvement</h5>
-            <ul>
-                <li>
-                    <lh>DePaul AIGA</lh> <br>
-                    <span class="jobtitle">Programming Officer</span> <br>
-                    <span class="date">09.14 – 06.15 </span><br>
-                <span class="description">
-                    Cooperate with other board members to create upcoming events for students in the design program.
-                </span>
-                </li>
-                <li>
-                    <lh>Society of Typographic Arts</lh> <br>
-                    <span class="jobtitle">Archive Team Member</span> <br>
-                    <span class="date">2012, 2013, 2014 </span><br>
-                <span class="description">
-                    Organize and track design entries.
-                </span>
-                </li>
-            </ul>
-        </article>
-        <article class="aboutsection">
-            <h5>Recognition</h5>
-            <ul>
-                <li>
-                    <lh>Faculty | Online Publication</lh> <br>
-                    <span class="jobtitle">Founder</span> <br>
-                    <span class="date">2016 – Present</span><br>
-                <span class="description">
-                    Founded and created an online publication.
-                </span>
-                </li>
-                <li>
-                    <lh>DePaul University</lh> <br>
-                    <span class="jobtitle">Graphic Design Student Spotlight</span> <br>
-                    <span class="date">2015</span><br>
-                <span class="description">
-                    Participate in university panel and answer questions by parents and prospective students interested in the graphic design program.
-                </span>
-                </li>
-                <li>
-                    <lh>Uno Charter School Workshop</lh> <br>
-                    <span class="jobtitle">DePaul University Graphic Design Representative</span> <br>
-                    <span class="date">2015</span><br>
-                <span class="description">
-                    Teach a 4th grade class about a career in graphic design by going over a brief design presentation and providing a hands-on workshop.
-                </span>
-                </li>
-                <li>
-                    <lh>Leo Burnett & The One Club</lh> <br>
-                    <span class="jobtitle">Advertising Campaign Third Place Finalist</span> <br>
-                    <span class="date">2013</span><br>
-                <span class="description">
-                    Serve as art director to create an original ad campaign for Leo Burnett's client Sprint. Collaborate with various students from different career majors.
-                </span>
-                </li>
-                <li>
-                    <lh>Society of Typographic Arts <br> Archive 13 Catalog</lh> <br>
-                    <span class="jobtitle">Photographer</span> <br>
-                    <span class="date">2013</span><br>
-                <span class="description">
-                    Photography featured in the Society of Typographic Arts Archive 13 catalog.
-                </span>
-                </li>
-            </ul>
 
         </article>
-        <article class="aboutsection">
-            <h5>Skills</h5>
-            <ul>
-                <li>
-                    <lh>Web</lh> <br>
-                    <span class="jobtitle">HTML</span><br>
-                    <span class="jobtitle">CSS</span><br>
-                    <span class="jobtitle">UI/UX</span><br>
-                    <span class="jobtitle">Social Media</span><br>
-                    <span class="jobtitle">GitHub</span><br>
-                    <span class="jobtitle">User Research</span><br>
-                    <span class="jobtitle">Wireframing & Prototyping</span><br>
+        -->
 
-                </li>
-                <li>
-                    <lh>Software</lh> <br>
-                    <span class="jobtitle">Adobe Creative Suite </span><br>
-                    <span class="jobtitle">InDesign</span><br>
-                    <span class="jobtitle">Photoshop</span><br>
-                    <span class="jobtitle">Illustrator</span><br>
-                    <span class="jobtitle">Premiere Pro</span><br>
-                </li>
-                <li>
-                    <lh>Video</lh> <br>
-                    <span class="jobtitle">Photography</span><br>
-                    <span class="jobtitle">Video Editing</span><br>
-                    <span class="jobtitle">Production Design</span><br>
-                    <span class="jobtitle">Art Direction</span><br>
-                </li>
-            </ul>
-
-        </article>
 
 
     </div>
-    <section class="social">
-
-        <h3>Colophon</h3>
-
-        <p>This website was built using <a href="http://neat.bourbon.io/" target="_blank">Neat</a>,  <a href="http://bourbon.io/" target="_blank">Bourbon</a>, <a href="https://jekyllrb.com/">Jekyll</a>,and <a href="http://sass-lang.com/" target="_blank">Sass</a>.</p>
-        <p>Was building this website easy? NO. Was it worth it? Yes.</p>
-        <p>Typefaces used are <a href="https://typekit.com/fonts/neuzeit-grotesk/n4/wfs" target="_blank">Neuzeit Grotesk</a> and <a href="https://typekit.com/fonts/jaf-lapture">JAF Lapture</a> provided by TypeKit.</p>
-        <p>Font-sizes are based on <em>8:9 major second</em> ratio through  <a href="http://www.modularscale.com/" target="_blank">Modular Scale</a>.</p>
-    </section>
 
 
-</div>
+
 
 
 
