--- a/photography.html
+++ b/photography.html
@@ -4,7 +4,50 @@ title: "Christian Solorzano | Online Portfolio"
 description: "Christian Solorzano is a Graphic Designer from Chicago. His work employs strategic solutions centered around collaboration and a deep understanding of client needs."
 ---
 
-<a data-flickr-embed="true" data-header="true"  href="https://www.flickr.com/photos/christians/albums/72157690110403863" title="2018"><img src="https://farm8.staticflickr.com/7830/47252973351_fa48f6a5ea_b.jpg" width="100%" height="100%" alt="2018"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+
+
+<h2>  My photography is devoted to the mundane and the fragile. I aim to capture reality through the lens of spiritual solitude and a high appreciation for virtue, transcendence, and gratitude.
+ </h2>
+
+<hr>
+
+
+<a data-flickr-embed="true"  href="https://www.flickr.com/photos/christians/47371858402/in/dateposted-public/" title="DSCF3402"><img src="https://farm8.staticflickr.com/7831/47371858402_bf2268e16b.jpg" width="100%" height="100%" alt="DSCF3402"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+
+
+
+<a data-flickr-embed="true"  href="https://www.flickr.com/photos/christians/33548736858/in/dateposted-public/" title="DSCF2927"><img src="https://farm8.staticflickr.com/7806/33548736858_6baca422d2.jpg" width="100%" height="100%" alt="DSCF2927"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+
+<a data-flickr-embed="true"  href="https://www.flickr.com/photos/christians/40424472463/in/dateposted-public/" title="DSC_1155"><img src="https://farm5.staticflickr.com/4858/40424472463_135169126a.jpg" width="100%" height="100%" alt="DSC_1155"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+
+
+<a data-flickr-embed="true"  href="https://www.flickr.com/photos/christians/33398199708/in/dateposted-public/" title="DSCF3833"><img src="https://farm8.staticflickr.com/7922/33398199708_96f8b672e3.jpg" width="100%" height="100%" alt="DSCF3833"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+
+<a data-flickr-embed="true"  href="https://www.flickr.com/photos/christians/47257259971/in/dateposted-public/" title="DSCF2735"><img src="https://farm8.staticflickr.com/7860/47257259971_e80ff831b8.jpg" width="100%" height="100%" alt="DSCF2735"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+
+
+<a data-flickr-embed="true"  href="https://www.flickr.com/photos/christians/46533647924/in/dateposted-public/" title="DSCF1848"><img src="https://farm8.staticflickr.com/7837/46533647924_5895e1532a.jpg" width="100%" height="100%" alt="DSCF1848"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+
+
+<a data-flickr-embed="true"  href="https://www.flickr.com/photos/christians/47252974821/in/dateposted-public/" title="DSCF3384"><img src="https://farm8.staticflickr.com/7906/47252974821_0a46051c9b.jpg" width="100%" height="100%" alt="DSCF3384"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+
+
+<a data-flickr-embed="true"  href="https://www.flickr.com/photos/christians/47201047352/in/dateposted-public/" title="DSCF1896"><img src="https://farm8.staticflickr.com/7908/47201047352_a8ecf6b3c9.jpg" width="100%" height="100%" alt="DSCF1896"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+
+
+
+<a data-flickr-embed="true"  href="https://www.flickr.com/photos/christians/32310877127/in/dateposted-public/" title="IMG_1126"><img src="https://farm8.staticflickr.com/7803/32310877127_bc4ffb6616.jpg" width="100%" height="100%" alt="IMG_1126"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+
+<a data-flickr-embed="true"  href="https://www.flickr.com/photos/christians/32310872227/in/dateposted-public/" title="IMG_1906"><img src="https://farm8.staticflickr.com/7868/32310872227_c3476082fe.jpg" width="100%" height="100%" alt="IMG_1906"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+
+
+<a data-flickr-embed="true"  href="https://www.flickr.com/photos/christians/47200951282/in/dateposted-public/" title="Thursday Night"><img src="https://farm8.staticflickr.com/7813/47200951282_5f1b880924.jpg" width="100%" height="100%" alt="Thursday Night"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+
+<a data-flickr-embed="true"  href="https://www.flickr.com/photos/christians/40288043243/in/dateposted-public/" title="Nice."><img src="https://farm8.staticflickr.com/7830/40288043243_6732fb7ef9.jpg" width="100%" height="100%" alt="Nice."></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+
+
+<a data-flickr-embed="true"  href="https://www.flickr.com/photos/christians/47200916122/in/dateposted-public/" title="SF"><img src="https://farm8.staticflickr.com/7867/47200916122_797bd02495.jpg" width="100%" height="100%" alt="SF"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+
 
 
 
