--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 ---
 layout: portfolio
 title: "Christian Solorzano | Online Portfolio"
-description: "Christian Solorzano is a Designer from Chicago. His work employs strategic solutions centered around collaboration and a deep understanding of client needs."
+description: "Christian Solorzano is a Designer from Chicago. His work employs strategic solutions focused on collaboration and human-centered design."
 ---
 
-<h1>
+<h2>
     Hi, my name is Christian Solorzano
-</h1>
+</h2>
 
 <p class="large-p">
-    … and I'm devoted to crafting human-centered experiences with an emphasis on interaction-design and collaboration.
+    and I'm devoted to crafting human-centered experiences with an emphasis on interaction-design and collaboration.
 <p class="large-p">
 I currently reside in <a href="https://en.wikipedia.org/wiki/Chicago" target="_blank">Chicago</a>, where I create digital experiences at <a href="https://digital.pwc.com/en.html" target="_blank">PwC's Experience Center</a>. In the past I've worked for non-profits, educational institutions, and advertising agencies.
 <p class="large-p">
