--- a/index.html
+++ b/index.html
@@ -4,26 +4,38 @@ title: "Christian Solorzano | Online Portfolio"
 description: "Christian Solorzano is a Designer from Chicago. His work employs strategic solutions focused on collaboration and human-centered design."
 ---
 
-<h2>
-    Hi, my name is Christian Solorzano
-</h2>
-
 <p class="large-p">
-    and I'm devoted to crafting human-centered experiences with an emphasis on interaction-design and collaboration.
-<p class="large-p">
-I currently reside in <a href="https://en.wikipedia.org/wiki/Chicago" target="_blank">Chicago</a>, where I create digital experiences at <a href="https://digital.pwc.com/en.html" target="_blank">PwC's Experience Center</a>. In the past I've worked for non-profits, educational institutions, and advertising agencies.
-<p class="large-p">
-    I enjoy writing, <a href="http://www.christiansolorzano.pictures/" target="_blank">photography</a>, and learning about new ideas.
-</p>
-<p class="large-p">
-    My work is influenced by design history, advancements in technology and media, philosophy, and kindness.
-</p>
-<p class="large-p">
-    I'm currently unavailable for work but you can look at my <a href="/files/solorzano_christian_resume_design.pdf">résumé</a> anyways.
+    Okay, my name is Christian Solorzano
 </p>
 
 
+<p class="large-p">
+    I am devoted to human-centered design and experimental art-making.
+<p class="large-p">
+    Currently, I work at <a href="https://digital.pwc.com/en.html" target="_blank">PwC's Experience Center</a> where I concentrate on crafting digital experiences, through thoughtful strategy and execution. I'm passionate about mentorship and facilitating conversations, which is an essential part of my practice, and something I do through <a href="https://chicago.aiga.org/mentorship/mentor-program/" target="_blank">the AIGA Chicago Mentorship Program</a>.
+</p>
 
+<p class="large-p">
+    My inspiration is found in writing, photography, my community, philosophy, history, diversity & inclusion, my design book club, and kindness.
+</p>
+
+
+<p class="large-p">
+    I'm currently unavailable for work but open to collaboration/conversation.
+</p>
+
+<p class="large-p">
+    Contact me at <b>cs@christiansolorzano.com</b>
+</p>
+
+
+
+<div id="about-top">
+    {% img about-self.png alt:'Christian Solorzano 2017' %}
+
+
+
+</div>
 
 
 
