--- a/photography.html
+++ b/photography.html
@@ -4,12 +4,12 @@ title: "Christian Solorzano | Online Portfolio"
 description: "Christian Solorzano is a Graphic Designer from Chicago. His work employs strategic solutions centered around collaboration and a deep understanding of client needs."
 ---
 
+<a data-flickr-embed="true"  href="https://www.flickr.com/photos/christians/46971256934/in/dateposted-public/" title="DSCF4206"><img src="https://live.staticflickr.com/65535/46971256934_1943eb90f4.jpg" width="100%" height="100%" alt="DSCF4206"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
 
+<a data-flickr-embed="true"  href="https://www.flickr.com/photos/christians/47707949362/in/dateposted-public/" title="DSCF4247"><img src="https://live.staticflickr.com/65535/47707949362_7066fd32dc.jpg" width="100%" height="100%" alt="DSCF4247"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
 
-<h2>  My photography is devoted to the mundane and the fragile. I aim to capture reality through the lens of spiritual solitude and a high appreciation for virtue, transcendence, and gratitude.
- </h2>
+<a data-flickr-embed="true"  href="https://www.flickr.com/photos/christians/47707951492/in/dateposted-public/" title="DSCF4215"><img src="https://live.staticflickr.com/65535/47707951492_3c0366a896.jpg" width="100%" height="100%" alt="DSCF4215"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
 
-<hr>
 
 
 <a data-flickr-embed="true"  href="https://www.flickr.com/photos/christians/47371858402/in/dateposted-public/" title="DSCF3402"><img src="https://farm8.staticflickr.com/7831/47371858402_bf2268e16b.jpg" width="100%" height="100%" alt="DSCF3402"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
