--- a/play.html
+++ b/play.html
@@ -6,6 +6,7 @@ description: "Christian Solorzano is a Graphic Designer from Chicago. His work e
 
 
 <div id="play">
+    {% img play/play-31.png alt:'Christian Solorzano Visual Experiments' %}
     {% img play/play-31.jpg alt:'Christian Solorzano Visual Experiments' %}
     {% img play/play-30.jpg alt:'Christian Solorzano Visual Experiments' %}
     {% img play/play-29.jpg alt:'Christian Solorzano Visual Experiments' %}
