new images and background

--- a/design.html
+++ b/design.html
@@ -11,6 +11,12 @@ description: "Christian Solorzano is graphic designer"
 
 <img src="/assets/images/play/play-34.jpg" class="full-width">
 
+<img src="/assets/images/play/play-37.jpg" class="full-width">
+
+<img src="/assets/images/play/play-38.jpg" class="full-width">
+
+<img src="/assets/images/play/play-39.jpg" class="full-width">
+
 <img src="/assets/images/play/play-35.jpg" class="half-container">
 <img src="/assets/images/play/play-36.gif" class="half-container">
 
