images and such

--- a/photography.html
+++ b/photography.html
@@ -10,7 +10,13 @@ description: "Christian Solorzano is graphic designer"
 </span>
 <img src="/assets/images/photography/DSCF0332.jpg" class="full-width">
 
+<img src="/assets/images/photography/DSCF8201.jpg" class="half-container">
+<img src="/assets/images/photography/DSCF8206.jpg" class="half-container">
+
 <img src="/assets/images/photography/DSCF6737.jpg" class="full-width">
+
+<img src="/assets/images/photography/DSCF9120.jpg" class="half-container">
+<img src="/assets/images/photography/DSCF8308.jpg" class="half-container">
 
 <img src="/assets/images/photography/DSCF2587.jpg" class="half-container">
 <img src="/assets/images/photography/DSCF2284.jpg" class="half-container">
