--- a/design.html
+++ b/design.html
@@ -6,7 +6,7 @@ description: "Christian Solorzano is graphic designer"
 ---
 <span class="four-columns">
     <h1>Design</h1>
-    <p>Things made by me.</p>
+    <p>Things made by me</p>
 </span>
 
 <img src="/assets/images/play/play-40.gif" class="full-width">
