--- a/photography.html
+++ b/photography.html
@@ -6,8 +6,14 @@ description: "Christian Solorzano is graphic designer"
 ---
 <span class="four-columns">
     <h1>Photography</h1>
-    <p>Taken in and around Chicago.</p>
+    <p>Taken in and around Chicago</p>
 </span>
+
+<img src="/assets/images/photography/L1020092-2.jpg" class="full-width">
+
+<img src="/assets/images/photography/DSCF9158.jpg" class="full-width">
+
+<img src="/assets/images/photography/L1002422.jpg" class="full-width">
 
 <img src="/assets/images/photography/DSCF0332.jpg" class="full-width">
 
