--- a/design.html
+++ b/design.html
@@ -9,6 +9,8 @@ description: "Christian Solorzano is graphic designer"
     <p>Things made by me</p>
 </span>
 
+<img src="/assets/images/play/play-41.gif" class="full-width">
+
 <img src="/assets/images/play/play-40.gif" class="full-width">
 
 <img src="/assets/images/play/play-34.jpg" class="full-width">
