letter-spacing applied to all

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ title: "Christian Solorzano | Website"
 
 
 <h1 class="full-width">Journal</h1>
-<span class="hover-title diary-post">
+<span class="hover-title diary-post gradient-group">
     {% for post in site.categories.diary %}
 
 
