--- a/photography.html
+++ b/photography.html
@@ -22,7 +22,7 @@ description: "Christian Solorzano is graphic designer"
 
 <img src="/assets/images/photography/DSCF6737.jpg" class="full-width">
 
-<img src="/assets/images/photography/L1020314.jpg" class="half-container">
+<img src="/assets/images/photography/L1020314.jpg" class="full-width">
 
 <img src="/assets/images/photography/L1011056.jpg" class="half-container">
 <img src="/assets/images/photography/L1010713.jpg" class="half-container">
